# cpp-basekit

./: CMakeLists.txt  README.md
cmake/: buildSupport.cmake  version.rc.in
include/: myLogLib.h
install/include/myLibrary_Windows_GCC_v11.5.0_Cygwin_x64/: myLogApi_global.h
install/include/myLibrary_Windows_MSVC_v1900_x64/: myLogApi.h  myLogApi_global.h
install/lib/Debug_Windows_MSVC_v1900_x64/: myLogd.lib
install/lib/Release_Windows_MSVC_v1900_x64/: myLog.lib
lib/Debug/: myLogLib_debug.lib
lib/Debug_Windows_MSVC_v1900_x64/: myLogLibd.lib  myLogd.lib
lib/Release/: myLogLib.lib
lib/Release_Windows_MSVC_v1900_x64/: myLog.lib  myLogLib.lib
myLog/: CMakeLists.txt
myLog/include/: myLogApi.h  myLogLib.h
myLog/src/: myLog.cpp  myLog.h  myLogApi.cpp  myLogLib.cpp
src/: main.cpp
